Stac 12434 raw agent metrics (#379)
* Raw Agent Data

* pipeline improvements / fixes

* add missing env vars

* Added raw metrics start & stop snapshot & integrations implementation

* Shifted manual cleanup step

* Removed duplicate setSubmit on two.h

* stackstate deps update

* Update go set_submit_raw_metrics_data_cb submitRawMetricsData value

* Raw metrics tests function name update

* Removed unused int parameters for raw metrics

* Debug logging

* metric test, package target changed to raw_metrics

* Raw metrics more debug logs for unit tests

* Test start snapshot with 5 arguments

* Raw Agent Removed the extra parameters

* Removed Stream, Startsnapshot & Endsnapshot

* Removed snapshot from raw_metrics.go

* Merged raw metrics c,h with telemetry c,h

* Telemetry and Raw metrics combine

* Add parameters to TestSubmitRawMetricsData run

* Test error message in .c

* Add more debug logs

* rtloader comment update

* Single string parameter test

* Restore changes

* cb_submit_raw_metrics_data not defined message

* cb_submit_raw_metrics_data not defined message

* Force rebuild from commit

* Added temp test values

* Added temp test values

* Add vagrant assistance file for creating the ideal env for rtloader tests

* Test telemetry.c

* Test telemetry.c

* move pytags extraction to utils

* Assistance vagrant updated

* Raw metric updates

* Shift and remove raw metric definition in init.go

* Raw metrics add comments

* Temp display key

* Fix batcher test

* Test create phase on test instead of prepare

* Debug attempt

* Changed create to prepare for force

* Permissions test

* Add extra debugging

* Test compose on a single stage

* Removed debug commands, cleaner logs

* Removed debug commands, cleaner logs

* Test stage move to acceptance

* Check docker.io paths

* Add debugging logs

* Removed logging

* Testing with hc data

* Testing with

--- a/test/molecule-role/molecule/_shared/files/docker-compose.base.yml
+++ b/test/molecule-role/molecule/_shared/files/docker-compose.base.yml
@@ -39,6 +39,8 @@ services:
       - 1618:1618
     environment:
       KAFKA_BROKERS: kafka:9092
+      # STACKSTATE_RECEIVER_HTTP_LOG_LEVEL: DEBUG
+      # STACKSTATE_CORRELATE_LOG_LEVEL: DEBUG
     restart: always
     mem_limit: 1G
 
