--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,6 +46,8 @@ variables: &commonvariables
   ARCH: amd64
   VCINSTALLDIR: "C:\\Program Files (x86)\\Microsoft Visual Studio\\2017\\Community"
   MOLECULE_K8S_CLUSTER: eks_test_cluster_1_21
+  PRIMARY_MAJOR_VERSION: '2'
+
 
 .agent2_variables: &agent2_variables
   CONDA_ENV: ddpy2
