revert Temporarily use docker.io image

--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -1,4 +1,4 @@
-image: docker.io/stackstate/stackstate-agent-runner-gitlab:latest7
+image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:latest7
 
 stages:
   - manual_cleanup
@@ -156,7 +156,7 @@ deps_deb:
 deps_rpm:
   stage: prepare
   interruptible: true
-  image: docker.io/stackstate/stackstate-agent-runner-gitlab:centos7_20211004_v7_0
+  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:centos7_20211004_v7_0
   cache:
     key: "deps-rpm-$STS_VER-$CI_COMMIT_REF_SLUG"
     paths:
@@ -407,7 +407,7 @@ build_deb:
 build_rpm:
   stage: build
   interruptible: true
-  image: docker.io/stackstate/stackstate-agent-runner-gitlab:centos7_20211004_v7_0
+  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:centos7_20211004_v7_0
   needs:
     - deps_rpm
   tags:
@@ -515,7 +515,7 @@ test_deb_renaming:
 test_rpm_renaming:
   stage: test
   interruptible: true
-  image: docker.io/stackstate/stackstate-agent-runner-gitlab:centos6_20190429
+  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:centos6_20190429
   needs:
     - build_rpm
   before_script: []
@@ -583,7 +583,7 @@ pre_release_win:
 pre_release_rpm:
   stage: pre_release
   interruptible: true
-  image: docker.io/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
+  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
   needs:
     - build_rpm
   before_script: []
@@ -598,7 +598,7 @@ pre_release_rpm:
 
 pre_release_main_agent_image: &pre_release_image
   stage: pre_release
-  image: docker.io/docker:18.06.0
+  image: artifactory.stackstate.io/docker-virtual/docker:18.06.0
   needs:
     - build_deb
   variables:
@@ -606,7 +606,7 @@ pre_release_main_agent_image: &pre_release_image
     DOCKER_HOST: tcp://docker:2375
     DOCKER_TLS_CERTDIR: ""
   services:
-    - name: docker.io/docker:18.09-dind
+    - name: artifactory.stackstate.io/docker-virtual/docker:18.09-dind
       alias: docker
   before_script: []
   script:
@@ -1188,7 +1188,7 @@ release_deb:
 release_rpm:
   interruptible: true
   stage: release
-  image: docker.io/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
+  image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:deb-rpmpublisher
   dependencies:
     - build_rpm
   before_script:
@@ -1240,7 +1240,7 @@ release_win:
 
 .base_release_image: &base_release_image
   stage: release
-  image: docker.io/docker:18.06.0
+  image: artifactory.stackstate.io/docker-virtual/docker:18.06.0
   dependencies:
     - build_deb
   variables:
@@ -1248,7 +1248,7 @@ release_win:
     DOCKER_HOST: tcp://docker:2375
     DOCKER_TLS_CERTDIR: ""
   services:
-    - name: docker.io/docker:18.09-dind
+    - name: artifactory.stackstate.io/docker-virtual/docker:18.09-dind
       alias: docker
   before_script: []
   tags:
