--- a/.gitlab-ci-cluster-agent.yml
+++ b/.gitlab-ci-cluster-agent.yml
@@ -4,7 +4,7 @@
 ####################################################################################################
 ####################################################################################################
 
-image: docker.io/stackstate/stackstate-agent-runner-gitlab:latest7
+image: artifactory.tooling.stackstate.io/docker-virtual/stackstate/stackstate-agent-runner-gitlab:latest7
 
 stages:
   - prepare
