push deb base and main runner

--- a/.cd-builders/runner7-gitlab-deb/Makefile
+++ b/.cd-builders/runner7-gitlab-deb/Makefile
@@ -1,6 +1,13 @@
+RUNTIMETAG := $(shell date +%Y%m%d)
+DOCKER_REPOSITORY ?= docker.io
+BASE_RUNNER_IMAGE_VERSION ?= deb7_latest
+
+version:
+	echo $(RUNTIMETAG) | tail -1 > version.txt
+
 build:
-	docker build -t docker.io/stackstate/stackstate-agent-runner-gitlab:latest7 .
+	docker build --build-arg BASE_RUNNER_IMAGE_VERSION=$(BASE_RUNNER_IMAGE_VERSION) -t $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-gitlab:deb7_$(RUNTIMETAG) .
 try:
-	docker run -it docker.io/stackstate/stackstate-agent-runner-gitlab:latest7 bash
+	docker run -it $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-gitlab:deb7_$(RUNTIMETAG) bash
 push:
-	docker push docker.io/stackstate/stackstate-agent-runner-gitlab:latest7
+	docker push $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-gitlab:deb7_$(RUNTIMETAG)
