--- a/.cd-builders/runner7-circle-deb/Makefile
+++ b/.cd-builders/runner7-circle-deb/Makefile
@@ -1,18 +1,19 @@
 RUNTIMETAG := $(shell date +%Y%m%d)
+DOCKER_REPOSITORY ?= docker.io
 
 version:
 	echo $(RUNTIMETAG) | tail -1 > version.txt
 
 build:
-	docker build -t docker.io/stackstate/stackstate-agent-runner-circle:deb7_$(RUNTIMETAG) .
+	docker build -t $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb7_$(RUNTIMETAG) .
 push:
-	docker push docker.io/stackstate/stackstate-agent-runner-circle:deb7_$(RUNTIMETAG)
+	docker push $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb7_$(RUNTIMETAG)
 
 try:
-	docker run -it docker.io/stackstate/stackstate-agent-runner-circle:deb7_$(RUNTIMETAG) sh
+	docker run -it $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb7_$(RUNTIMETAG) sh
 
 tag_latest:
-	docker tag docker.io/stackstate/stackstate-agent-runner-circle:deb7_$(RUNTIMETAG) docker.io/stackstate/stackstate-agent-runner-circle:deb7_latest
+	docker tag $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb7_$(RUNTIMETAG) docker.io/stackstate/stackstate-agent-runner-circle:deb7_latest
 
 push_latest:
-	docker push docker.io/stackstate/stackstate-agent-runner-circle:deb7_latest
+	docker push $(DOCKER_REPOSITORY)/stackstate/stackstate-agent-runner-circle:deb7_latest
