--- a/.gitlab-ci-build-runners.yml
+++ b/.gitlab-ci-build-runners.yml
@@ -1,5 +1,3 @@
-
-
 stages:
   - build_runner_base
   - build_runners
@@ -17,9 +15,10 @@ build-deb-base:
   stage: build_runner_base
   script:
     - cd $RUNNER7_DEB_BASE
-   # make the image, try running sh, push the tag to quay, write the version as a artifact
+    # make the image, try running sh, push the tag to quay, write the version as a artifact
     - make build try push version
-    - echo "Produced deb based container version: $(cat $RUNNER7_DEB_BASE/version.txt)"
+    - export BASE_RUNNER_IMAGE_VERSION="$(cat $RUNNER7_DEB_BASE/version.txt)"
+    - echo Produced deb based container version $BASE_RUNNER_IMAGE_VERSION
   artifacts:
     name: Base deb image version
     paths:
@@ -38,11 +37,12 @@ build-main-runner:
   needs: [build-deb-base]
   script:
     - cd RUNNER7_MAIN
-    - export BASE_RUNNER_IMAGE_VERSION=$(cat $RUNNER7_DEB_BASE/version.txt)
+    - export BASE_RUNNER_IMAGE_VERSION="$(cat $RUNNER7_DEB_BASE/version.txt)"
     - echo "Using deb base container version: $BASE_RUNNER_IMAGE_VERSION"
     # make the image, try running sh, push the tag to quay, write the version as a artifact
     - make build try push version
-    - echo "Produced deb container version: $(cat $RUNNER7_MAIN/version.txt)"
+    - export MAIN_RUNNER_IMAGE_VERSION=$(cat $RUNNER7_MAIN/version.txt)
+    - echo Produced deb container version $MAIN_RUNNER_IMAGE_VERSION
   retry:
     max: 2
     when:
