--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -99,49 +99,49 @@ variables: &commonvariables
     if: $CI_COMMIT_TAG =~ /3\..*/
     when: never
 
-agent2:
-  stage: triggers
-  variables:
-    <<: *commonvariables
-    <<: *agent2_variables
-  trigger:
-    include: .gitlab-ci-agent.yml
-    strategy: depend
-  rules:
-    - <<: *exclude_on_cluster_agent
-    # exclude this pipeline if we're running a v3 tag pipeline
-    - <<: *exclude_on_tag_v3
-    - if: $CI_COMMIT_MESSAGE =~ /\[py3]/
-      when: never
-    - when: on_success
-
-agent3:
-  stage: triggers
-  variables:
-    <<: *commonvariables
-    <<: *agent3_variables
-  trigger:
-    include: .gitlab-ci-agent.yml
-    strategy: depend
-  rules:
-    - <<: *exclude_on_cluster_agent
-    # exclude this pipeline if we're running a v2 tag pipeline
-    - <<: *exclude_on_tag_v2
-    - if: $CI_COMMIT_MESSAGE =~ /\[py2]/
-      when: never
-    - when: on_success
-
-cluster_agent:
-  stage: triggers
-  variables:
-    <<: *commonvariables
-    <<: *agent3_variables
-  trigger:
-    include: .gitlab-ci-cluster-agent.yml
-    strategy: depend
-  rules:
-    - <<: *include_on_cluster_agent
-    - when: never
+#agent2:
+#  stage: triggers
+#  variables:
+#    <<: *commonvariables
+#    <<: *agent2_variables
+#  trigger:
+#    include: .gitlab-ci-agent.yml
+#    strategy: depend
+#  rules:
+#    - <<: *exclude_on_cluster_agent
+#    # exclude this pipeline if we're running a v3 tag pipeline
+#    - <<: *exclude_on_tag_v3
+#    - if: $CI_COMMIT_MESSAGE =~ /\[py3]/
+#      when: never
+#    - when: on_success
+#
+#agent3:
+#  stage: triggers
+#  variables:
+#    <<: *commonvariables
+#    <<: *agent3_variables
+#  trigger:
+#    include: .gitlab-ci-agent.yml
+#    strategy: depend
+#  rules:
+#    - <<: *exclude_on_cluster_agent
+#    # exclude this pipeline if we're running a v2 tag pipeline
+#    - <<: *exclude_on_tag_v2
+#    - if: $CI_COMMIT_MESSAGE =~ /\[py2]/
+#      when: never
+#    - when: on_success
+#
+#cluster_agent:
+#  stage: triggers
+#  variables:
+#    <<: *commonvariables
+#    <<: *agent3_variables
+#  trigger:
+#    include: .gitlab-ci-cluster-agent.yml
+#    strategy: depend
+#  rules:
+#    - <<: *include_on_cluster_agent
+#    - when: never
 
 build_runners:
   stage: triggers
